-m "Added stand in image for recipe and fixed spacing"

--- a/src/app/feed-me-later-page/feed-me-later-page.component.css
+++ b/src/app/feed-me-later-page/feed-me-later-page.component.css
@@ -37,6 +37,10 @@ body {
 
 }
 
+#instructions{
+  padding-left: 30px;
+}
+
 .container {
 /* This puts all of the */
 width:1000px;
